# bayes_trans

./: .gitignore  README.md  pyproject.toml
src/bayes_trans/: __init__.py  bayes_trans.py
